--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <packaging>war</packaging>
 
 	<name>demo-1</name>
 	<description>Demo project for Spring Boot</description>
@@ -22,6 +22,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<tomcat.version>8.5.34</tomcat.version>
+		<start-class>com.example.demo.SpringMyBatisApplicationWar</start-class>
 	</properties>
 
 	<dependencies>
@@ -40,6 +42,29 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		
+		<!-- marked the embedded servlet container as provided -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>json.simple</groupId>
+		    <artifactId>json</artifactId>
+		    <version>1.1</version>
+		    <scope>system</scope>
+		    <systemPath>C:\Users\JeongHoonKim\Documents\workspace-sts-3.9.6.RELEASE\SpringMyBatis\lib\json-simple-1.1.jar</systemPath>
+		</dependency>
+		
+		<dependency>
+		    <groupId>ojdbc6</groupId>
+		    <artifactId>ojdbc6</artifactId>
+		    <version>1.0</version>
+		    <scope>system</scope>
+		    <systemPath>C:\Users\JeongHoonKim\Documents\workspace-sts-3.9.6.RELEASE\SpringMyBatis\lib\ojdbc6.jar</systemPath>
 		</dependency>
 	</dependencies>
 
